# learn-cmake

./: CMakeLists.txt  main.cpp
include/: Blah.h
src/: Blah.cpp
